# OOvsTemplate

./: CMakeLists.txt  IComparable.h  IntComparison.cpp  IntComparison.h  IntWrapper.cpp  IntWrapper.h  README.md  RandomGeneration.cpp  RandomGeneration.h  Sort.cpp  Sort.h  StringWrapper.cpp  StringWrapper.h  main.cpp  templateGen.cpp  templateGen.h
Interfaces/: IComparable.cpp
Utilities/: RandomGeneration.cpp  RandomGeneration.h  Sort.cpp  Sort.h
Wrappers/: IntWrapper.cpp  IntWrapper.h  StringWrapper.h
